[package]
name = "ecosystem"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["lawff<evilllawliet@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
thiserror = "1.0"
