[package]
name = "ecosystem"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["lawff<evilllawliet@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
opentelemetry = "0.23"
opentelemetry-otlp = { version = "0.16", features = ["tonic"] }
opentelemetry_sdk = { version = "0.23", features = ["rt-tokio"] }
tracing-opentelemetry = "0.23"

[dev-dependencies]
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
axum = { version = "0.7.5", features = ["http2", "query", "tracing"] }
tokio = { version = "1.37.0", features = ["full"] }
