[package]
name = "ecosystem"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["lawff<evilllawliet@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
opentelemetry = "0.23"
opentelemetry-otlp = { version = "0.16", features = ["tonic"] }
opentelemetry_sdk = { version = "0.23", features = ["rt-tokio"] }
tracing-opentelemetry = "0.23"
strum = { version = "0.26.2", features = ["derive"] }
dashmap = "5.5.3"
tokio-util = { version = "0.7.11", features = ["codec"] }
futures = "0.3.30"
tokio-stream = "0.1.15"
console-subscriber = "0.3.0"
sqlx = { version = "0.7.4", features = ["postgres", "runtime-tokio", "tls-rustls"] }
nanoid = "0.4.0"

[dev-dependencies]
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
axum = { version = "0.7.5", features = ["http2", "query", "tracing"] }
tokio = { version = "1.37.0", features = ["full"] }
derive_builder = "0.20.0"
chrono = { version = "0.4.38", features = ["serde"] }
derive_more = "0.99.17"
serde_with = "3.8.1"
base64 = "0.22.1"
http = "1.1.0"
bytes = { version = "1.6.0", features = ["serde"] }
blake3 = "1.5.1"
